--- a/k8s/frontend-multithread-service.yaml
+++ b/k8s/frontend-multithread-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: frontend-service
+  name: multithread-service
 spec:
   selector:
     app: frontend-react
