--- a/k8s/multithread-service.yaml
+++ b/k8s/multithread-service.yaml
@@ -4,7 +4,7 @@ metadata:
   name: multithread-service
 spec:
   selector:
-    app: frontend-react
+    app: multithread-react
   ports:
     - protocol: TCP
       port: 5173
